# VideoCardController

./: .gitignore  CMakeLists.txt  README.md  cardinfo.cpp  cardinfo.h  cardinfo.ui  cardlogger.cpp  cardlogger.h  cardmode.cpp  cardmode.h  cardmode.ui  databasecollector.cpp  databasecollector.h  graphwindow.cpp  graphwindow.h  interfacehelper.cpp  interfacehelper.h  linkingwindow.cpp  linkingwindow.h  linkingwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  profilemanager.cpp  profilemanager.h  videocardcollector.cpp  videocardcollector.h
src/cardinfo/: cardinfo.cpp  cardinfo.h  graphwindow.cpp  graphwindow.h  videocardcollector.cpp  videocardcollector.h
src/cardinfo/interface/: graphwindow.ui
src/cardlogger/: cardlogger.cpp  cardlogger.h
src/cardlogger/interface/: cardlogger.ui
src/cardsettings/: cardmode.cpp  cardmode.h  linkingwindow.cpp  linkingwindow.h  profilemanager.cpp  profilemanager.h
src/cardsettings/interface/: linkingwindow.ui  profilemanager.ui
src/database/: databasecollector.h
src/infohelper/: interfacehelper.cpp  interfacehelper.h
src/infohelper/interface/: interfacehelper.ui
